Service Information validation - Part 1 API-24833 - Part 1 AC points 1 - 12 * Adds RSpec tests for validating service information elements for AC points 1 - 12 * Adds methods in validation file for validating service information elements * Updates 526 schema, and related JSON files, for the updated type for confinements Changes to be committed: 	modified:   modules/claims_api/app/controllers/concerns/claims_api/v2/disability_compensation_validation.rb 	modified:   modules/claims_api/app/swagger/claims_api/v2/dev/swagger.json 	modified:   modules/claims_api/config/schemas/v2/526.json 	modified:   modules/claims_api/config/schemas/v2/request_bodies/disability_compensation/example.json 	modified:   modules/claims_api/config/schemas/v2/request_bodies/disability_compensation/request.json 	modified:   modules/claims_api/spec/fixtures/v2/veterans/disability_compensation/form_526_json_api.json 	modified:   modules/claims_api/spec/requests/v2/veterans/disability_compensation_request_spec.rb 	modified:   spec/support/schemas/claims_api/v2/forms/disability/submission.json
