# modules/claims_api/app/swagger/claims_api/v2/dev/swagger.json
@@ -2109,15 +2109,20 @@
                               "example": "2018-03-02"
                             },
                             "treatedDisabilityNames": {
-                              "description": "Names of disability treated.",
+                              "description": "Name(s) of Disabilities treated in this time frame.",
                               "type": "array",
                               "minItems": 1,
                               "maxItems": 101,
-                              "uniqueItems": true,
                               "items": {
-                                "description": "Name of Disabilities Veteran was Treated for.",
                                 "type": "string",
-                                "example": "PTSD (post traumatic stress disorder)"
+                                "additionalProperties": false,
+                                "properties": {
+                                  "type": "string",
+                                  "example": [
+                                    "PTSD (post traumatic stress disorder)",
+                                    "Trauma"
+                                  ]
+                                }
                               }
                             },
                             "center": {
@@ -2247,18 +2252,33 @@
                             }
                           },
                           "confinements": {
-                            "type": "object",
+                            "type": "array",
                             "description": "",
-                            "properties": {
-                              "approximateBeginDate": {
-                                "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
-                                "type": "string",
-                                "example": "2018-06-04"
-                              },
-                              "approximateEndDate": {
-                                "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
-                                "type": "string",
-                                "example": "2018-06-04"
+                            "uniqueItems": true,
+                            "items": {
+                              "type": "object",
+                              "additionalProperties": false,
+                              "properties": {
+                                "confinement": {
+                                  "type": "object",
+                                  "additionalProperties": false,
+                                  "required": [
+                                    "approximateBeginDate",
+                                    "approximateEndDate"
+                                  ],
+                                  "properties": {
+                                    "approximateBeginDate": {
+                                      "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                      "type": "string",
+                                      "example": "2018-06-04"
+                                    },
+                                    "approximateEndDate": {
+                                      "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                      "type": "string",
+                                      "example": "2018-08-04"
+                                    }
+                                  }
+                                }
                               }
                             }
                           },
@@ -2266,11 +2286,30 @@
                             "type": "object",
                             "additionalProperties": false,
                             "required": [
-                              "obligationTermOfServiceFromDate",
-                              "obligationTermOfServiceToDate",
+                              "obligationTermsOfService",
                               "unitName"
                             ],
                             "properties": {
+                              "obligationTermsOfService": {
+                                "type": "object",
+                                "additionalProperties": false,
+                                "required": [
+                                  "startDate",
+                                  "endDate"
+                                ],
+                                "properties": {
+                                  "startDate": {
+                                    "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                    "type": "string",
+                                    "example": "2018-06-04"
+                                  },
+                                  "endDate": {
+                                    "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                    "type": "string",
+                                    "example": "2018-06-04"
+                                  }
+                                }
+                              },
                               "component": {
                                 "type": "array",
                                 "description": "",
@@ -2300,14 +2339,6 @@
                                     "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$"
                                   }
                                 }
-                              },
-                              "obligationTermOfServiceFromDate": {
-                                "type": "string",
-                                "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$"
-                              },
-                              "obligationTermOfServiceToDate": {
-                                "type": "string",
-                                "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$"
                               },
                               "unitName": {
                                 "type": "string",
@@ -3390,18 +3421,33 @@
                                 }
                               },
                               "confinements": {
-                                "type": "object",
+                                "type": "array",
                                 "description": "",
-                                "properties": {
-                                  "approximateBeginDate": {
-                                    "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
-                                    "type": "string",
-                                    "example": "2018-06-04"
-                                  },
-                                  "approximateEndDate": {
-                                    "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
-                                    "type": "string",
-                                    "example": "2018-06-04"
+                                "uniqueItems": true,
+                                "items": {
+                                  "type": "object",
+                                  "additionalProperties": false,
+                                  "properties": {
+                                    "confinement": {
+                                      "type": "object",
+                                      "additionalProperties": false,
+                                      "required": [
+                                        "approximateBeginDate",
+                                        "approximateEndDate"
+                                      ],
+                                      "properties": {
+                                        "approximateBeginDate": {
+                                          "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                          "type": "string",
+                                          "example": "2018-06-04"
+                                        },
+                                        "approximateEndDate": {
+                                          "pattern": "^(\\d{4})-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$",
+                                          "type": "string",
+                                          "example": "2018-08-04"
+                                        }
+                                      }
+                                    }
                                   }
                                 }
                               },
@@ -3816,7 +3862,7 @@
                               "exposureOrEventOrInjury": ""
                             }
                           ],
-                          "isRelatedToToxicExposure": true,
+                          "isRelatedToToxicExposure": false,
                           "exposureOrEventOrInjury": ""
                         }
                       ],
@@ -3855,10 +3901,14 @@
                             "separationLocationCode": "V01D"
                           }
                         ],
-                        "confinements": {
-                          "approximateBeginDate": "2016-11-06",
-                          "approximateEndDate": "2016-11-09"
-                        },
+                        "confinements": [
+                          {
+                            "confinement": {
+                              "approximateBeginDate": "2016-11-06",
+                              "approximateEndDate": "2016-11-09"
+                            }
+                          }
+                        ],
                         "reservesNationalGuardService": {
                           "obligationTermsOfService": {
                             "startDate": "2016-11-24",
@@ -3877,7 +3927,8 @@
                           "receivingInactiveDutyTrainingPay": true
                         },
                         "alternateNames": [
-                          "John Jacob Jingleheimer-Schmidt"
+                          "John Jacob Jingleheimer-Schmidt",
+                          "Johnathon"
                         ],
                         "servedInActiveCombatSince911": false
                       },
@@ -4547,8 +4598,8 @@
                     "id": "1",
                     "type": "intent_to_file",
                     "attributes": {
-                      "creationDate": "2023-05-22",
-                      "expirationDate": "2024-05-22",
+                      "creationDate": "2023-05-24",
+                      "expirationDate": "2024-05-24",
                       "type": "compensation",
                       "status": "active"
                     }
